# wasvy

./: .envrc  .gitignore  CONTEXT.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: ci.yaml
crates/wasvy_build/: Cargo.toml
crates/wasvy_build/src/: builder.rs  language.rs  lib.rs  source.rs
crates/wasvy_cli/: Cargo.toml  askama.toml  build.rs
crates/wasvy_cli/src/: builder.rs  cli.rs  command.rs  dependency.rs  dev.rs  diagnostics.rs  editor.rs  fs.rs  id.rs  language.rs  lib.rs  main.rs  named.rs  remote.rs  runtime.rs  search.rs  source.rs  watch.rs  wit.rs
crates/wasvy_cli/src/editors/: generic.rs  mod.rs
crates/wasvy_cli/src/languages/: mod.rs  python.rs  rust.rs
crates/wasvy_cli/src/tui/: mod.rs
crates/wasvy_cli/src/witgen/: app.rs  bindings.rs  host.rs  mod.rs  system.rs
crates/wasvy_cli/templates/: README.md
crates/wasvy_cli/templates/python/: pyproject.toml
crates/wasvy_cli/templates/python/src/: __init__.py  app.py
crates/wasvy_cli/templates/rust/: Cargo.toml  Cargo.toml.tmpl
crates/wasvy_cli/templates/rust/src/: bindings.rs  lib.rs
crates/wasvy_cli/templates/wit/: guest.wit
crates/wasvy_cli/wit/: bevy-ecs.wit  wasvy-ecs.wit
crates/wasvy_guest/: Cargo.toml  README.md
crates/wasvy_macros/: Cargo.toml
crates/wasvy_macros/src/: lib.rs
crates/wasvy_mock/: Cargo.toml
crates/wasvy_mock/src/: lib.rs
crates/wasvy_mock/tests/: cli.rs
crates/wasvy_runtime/: Cargo.toml
crates/wasvy_runtime/src/: app_extend.rs  asset.rs  authoring.rs  cleanup.rs  component.rs  lib.rs  methods.rs  mods.rs  plugin.rs  prelude.rs  sandbox.rs  schedule.rs
crates/wasvy_runtime/src/devtools/: mod.rs
crates/wasvy_runtime/src/devtools/remote/: list.rs
crates/wasvy_wasm/: Cargo.toml
crates/wasvy_wasm/src/: engine.rs  entity.rs  lib.rs  plugin.rs  query.rs  runner.rs  send_sync_ptr.rs  system.rs  wasm_asset.rs
crates/wasvy_wasm/src/host/: app.rs  component.rs  mod.rs  query.rs  query_result.rs  schedule.rs  serialize.rs
docs/: wasvy-modules-single-crate-dual-target-architecture.md  wasvy-runtime-vision.md
docs/adr/: 0001-wasvy-modules-distinct-product-surface.md  0002-preserve-world-state-on-module-reload.md
docs/plans/: wasvy-modules-implementation-plan.md  wasvy-modules-phase-0-1-api-skeletons.md  wasvy-modules-phase-0-1-checklist.md
docs/research/: wasm-component-plan-metadata.md
docs/rfcs/: rust-modular-game-authoring.md
examples/: prototype_executor_seam.rs  wasvy_modules_runtime_prototype.rs  witgen.rs
examples/apps/basic/: Cargo.toml
examples/apps/basic/src/: main.rs
examples/apps/components/: Cargo.toml  README.md  build.rs
examples/apps/components/src/: components.rs  main.rs
examples/apps/custom_codec/: Cargo.toml
examples/apps/custom_codec/src/: main.rs
examples/assets/: .gitignore  README.md
examples/custom_codec/: Cargo.toml
examples/custom_codec/src/: main.rs
examples/guest_wit_example/: Cargo.toml  README.md  build.rs
examples/guest_wit_example/src/: lib.rs
examples/guest_wit_example/wit/: guest.wit
examples/host_example/: Cargo.toml
examples/host_example/src/: main.rs
examples/host_wit_example/: Cargo.toml  README.md  build.rs
examples/host_wit_example/src/: components.rs  main.rs
examples/host_wit_example/wit/: bindings.wit  components.wit
examples/mods/rust/basic/: Cargo.toml
examples/mods/rust/basic/src/: lib.rs
examples/mods/rust/basic/wit/: guest.wit
examples/modules/hot_reload_workspace/: Cargo.toml  README.md  wasvy.toml
examples/modules/hot_reload_workspace/crates/game_api/: Cargo.toml
examples/modules/hot_reload_workspace/crates/game_api/src/: lib.rs
examples/modules/hot_reload_workspace/crates/game_host/: Cargo.toml
examples/modules/hot_reload_workspace/crates/game_host/src/: main.rs
examples/modules/hot_reload_workspace/crates/modules/counter/: Cargo.toml
examples/modules/hot_reload_workspace/crates/modules/counter/src/: lib.rs
examples/modules/two_modules_workspace/: Cargo.toml  README.md  wasvy.toml
examples/modules/two_modules_workspace/assets/: .gitignore
examples/modules/two_modules_workspace/crates/game_api/: Cargo.toml
examples/modules/two_modules_workspace/crates/game_api/src/: lib.rs
examples/modules/two_modules_workspace/crates/game_host/: Cargo.toml
examples/modules/two_modules_workspace/crates/game_host/src/: main.rs
examples/modules/two_modules_workspace/crates/modules/ai/: Cargo.toml
examples/modules/two_modules_workspace/crates/modules/ai/src/: lib.rs
examples/modules/two_modules_workspace/crates/modules/combat/: Cargo.toml
examples/modules/two_modules_workspace/crates/modules/combat/src/: lib.rs
examples/python_example/: pyproject.toml
examples/python_example/src/: app.py
examples/python_example/src/example/: __init__.py
examples/python_example/src/example/imports/: app.py
examples/python_example/src/python_example/: app.py
examples/python_example/src/python_example/example/: __init__.py
examples/python_example/src/python_example/example/imports/: app.py
examples/python_example/src/wit_world/: __init__.py
examples/python_example/src/wit_world/imports/: app.py
examples/python_example/wit/: world.wit
examples/simple/: Cargo.toml
examples/simple/src/: lib.rs
examples/simple/wit/: guest.wit
src/: access.rs  asset.rs  authoring.rs  cleanup.rs  component.rs  engine.rs  entity.rs  lib.rs  methods.rs  mods.rs  module_guest.rs  module_plugin.rs  module_reload.rs  modules.rs  plugin.rs  prelude.rs  query.rs  resource.rs  runner.rs  sandbox.rs  schedule.rs  send_sync_ptr.rs  serialize.rs  setup.rs  system.rs  systems.rs  witgen.rs  workspace.rs
src/devtools/: metadata.rs  mod.rs  mods.rs  plugin.rs
src/host/: app.rs  commands.rs  component.rs  entity.rs  entity_commands.rs  mod.rs  query.rs  query_result.rs  resource.rs  (+2 more)
tests/: authoring.rs  auto_host_components.rs  cli.rs  guest_bindings.rs  module_authoring_native.rs  module_authoring_trybuild.rs  modules_runtime.rs  trybuild.rs  type_path.rs  witgen.rs
wit/: wasvy-ecs.wit  wasvy-modules.wit
(+59 files in other folders)
