[package]
name = "wasvy"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[workspace]
members = [
    "crates/*",
    "examples/guest_wit_example",
    "examples/host_example",
    "examples/host_wit_example",
    "examples/simple",
]
resolver = "2"

[workspace.package]
authors = ["EngoDev", "MarcGuiselin"]
categories = ["wasm", "game-development"]
rust-version = "1.89.0"
version = "0.0.7"
edition = "2024"
description = "Bevy WASM"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/wasvy"
repository = "https://github.com/wasvy-org/wasvy"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.99"
bevy_asset = "0.18.0"
bevy_app = { version = "0.18.0", features = ["reflect_functions"] }
bevy_derive = "0.18.0"
bevy_ecs = { version = "0.18.0", features = ["reflect_functions"] }
bevy_log = "0.18.0"
bevy_math = { version = "0.18.0", features = [
    "std",
    "serialize",
], default-features = false }
bevy_platform = "0.18.0"
bevy_reflect = { version = "0.18.0", features = ["functions"] }
bevy_transform = { version = "0.18.0", features = [
    "serialize",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
inventory = "0.3.15"
wasmtime = { version = "40.0.1", features = ["component-model"] }
wasmtime-wasi = "40.0.1"
wasvy = { path = "./" }
wasvy_macros = { version = "*", path = "crates/wasvy_macros" }
wit-bindgen = { version = "0.50.0", features = ["bitflags"] }

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
inventory.workspace = true
wasvy_macros.workspace = true

[dev-dependencies]
wit-bindgen.workspace = true
trybuild = "1.0.111"

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable high optimizations for wasmtime and its transient dependencies in dev mode.
# This drastically improves the loading speed for the example mods (python especially)

# Core Wasmtime + internals
[profile.dev.package.wasmtime-environ]
opt-level = 2
[profile.dev.package.wasmtime-internal-asm-macros]
opt-level = 2
[profile.dev.package.wasmtime-internal-cache]
opt-level = 2
[profile.dev.package.wasmtime-internal-component-macro]
opt-level = 2
[profile.dev.package.wasmtime-internal-component-util]
opt-level = 2
[profile.dev.package.wasmtime-internal-cranelift]
opt-level = 2
[profile.dev.package.wasmtime-internal-fiber]
opt-level = 2
[profile.dev.package.wasmtime-internal-jit-debug]
opt-level = 2
[profile.dev.package.wasmtime-internal-jit-icache-coherence]
opt-level = 2
[profile.dev.package.wasmtime-internal-math]
opt-level = 2
[profile.dev.package.wasmtime-internal-slab]
opt-level = 2
[profile.dev.package.wasmtime-internal-unwinder]
opt-level = 2
[profile.dev.package.wasmtime-internal-versioned-export-macros]
opt-level = 2
[profile.dev.package.wasmtime-internal-wit-bindgen]
opt-level = 2
[profile.dev.package.cranelift-assembler-x64]
opt-level = 2
[profile.dev.package.cranelift-bforest]
opt-level = 2
[profile.dev.package.cranelift-bitset]
opt-level = 2
[profile.dev.package.cranelift-codegen]
opt-level = 2
[profile.dev.package.cranelift-codegen-shared]
opt-level = 2
[profile.dev.package.cranelift-control]
opt-level = 2
[profile.dev.package.cranelift-entity]
opt-level = 2
[profile.dev.package.cranelift-frontend]
opt-level = 2
[profile.dev.package.cranelift-native]
opt-level = 2
[profile.dev.package.regalloc2]
opt-level = 2
[profile.dev.package.wasmparser]
opt-level = 2
[profile.dev.package.target-lexicon]
opt-level = 2
[profile.dev.package.object]
opt-level = 2
[profile.dev.package.id-arena]
opt-level = 2
[profile.dev.package.bumpalo]
opt-level = 2
[profile.dev.package.memchr]
opt-level = 2
[profile.dev.package.rayon]
opt-level = 2
[profile.dev.package.rayon-core]
opt-level = 2
[profile.dev.package.crossbeam-deque]
opt-level = 2
[profile.dev.package.crossbeam-epoch]
opt-level = 2
[profile.dev.package.crossbeam-utils]
opt-level = 2
[profile.dev.package.smallvec]
opt-level = 2
[profile.dev.package.hashbrown]
opt-level = 2
[profile.dev.package.indexmap]
opt-level = 2
[profile.dev.package.rustc-hash]
opt-level = 2
[profile.dev.package.rustix]
opt-level = 2
[profile.dev.package.linux-raw-sys]
opt-level = 2
[profile.dev.package.memfd]
opt-level = 2
[profile.dev.package.zstd]
opt-level = 2
[profile.dev.package.zstd-safe]
opt-level = 2
[profile.dev.package.zstd-sys]
opt-level = 2
