[package]
name = "wasvy"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[workspace]
members = ["crates/*", "examples/apps/*", "examples/mods/rust/*"]
resolver = "2"

[workspace.package]
authors = ["EngoDev", "MarcGuiselin"]
categories = ["wasm", "game-development", "development-tools"]
rust-version = "1.92.0"
version = "0.0.8"
edition = "2024"
description = "Bevy WASM"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/wasvy"
repository = "https://github.com/wasvy-org/wasvy"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
bevy_asset = "0.18.0"
bevy_app = { version = "0.18.0", features = ["reflect_functions"] }
bevy_derive = "0.18.0"
bevy_ecs = { version = "0.18.0", features = ["reflect_functions"] }
bevy_log = "0.18.0"
bevy_math = { version = "0.18.0", features = [
    "std",
    "serialize",
], default-features = false }
bevy_platform = "0.18.0"
bevy_reflect = { version = "0.18.0", features = [
    "functions",
    "reflect_documentation",
] }
bevy_remote = "0.18.0"
bevy_transform = { version = "0.18.0", features = [
    "serialize",
], default-features = false }
derive_more = { version = "2", default-features = false, features = [
    "deref",
    "deref_mut",
] }
error-collection = "1.0.2"
glob = "0.3.3"
inventory = "0.3.15"
proc-macro2 = "1.0.89"
proc-macro-crate = "3.1.0"
quote = "1.0.36"
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
thiserror = "2.0.16"
toml = "1.1.0"
tracing = "0.1.44"
wasmtime = { version = "40.0.1", features = ["component-model"] }
wasmtime-wasi = "40.0.1"
wasvy = { path = "./" }
wasvy_cli = { path = "./crates/wasvy_cli" }
wasvy_macros = { version = "0.0.8", path = "crates/wasvy_macros" }
wit-bindgen = { version = "0.50.0", features = ["bitflags"] }
wit-parser = "0.245.1"

[features]
default = ["devtools", "serde_json"]
devtools = ["dep:bevy_remote"]
serde_json = ["dep:serde_json"]

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_remote = { workspace = true, optional = true }
inventory.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasvy_macros.workspace = true

[dev-dependencies]
wit-bindgen.workspace = true
trybuild = "1.0.111"

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Enable high optimizations for wasmtime and its transient dependencies in dev mode.
# This drastically improves the loading speed for the example mods (python especially)
[profile.dev.package]
wasmtime-environ.opt-level = 2
wasmtime-internal-cache.opt-level = 2
wasmtime-internal-component-macro.opt-level = 2
wasmtime-internal-component-util.opt-level = 2
wasmtime-internal-cranelift.opt-level = 2
wasmtime-internal-fiber.opt-level = 2
wasmtime-internal-jit-debug.opt-level = 2
wasmtime-internal-jit-icache-coherence.opt-level = 2
wasmtime-internal-math.opt-level = 2
wasmtime-internal-slab.opt-level = 2
wasmtime-internal-unwinder.opt-level = 2
wasmtime-internal-versioned-export-macros.opt-level = 2
wasmtime-internal-wit-bindgen.opt-level = 2
cranelift-assembler-x64.opt-level = 2
cranelift-bforest.opt-level = 2
cranelift-bitset.opt-level = 2
cranelift-codegen.opt-level = 2
cranelift-codegen-shared.opt-level = 2
cranelift-control.opt-level = 2
cranelift-entity.opt-level = 2
cranelift-frontend.opt-level = 2
cranelift-native.opt-level = 2
regalloc2.opt-level = 2
wasmparser.opt-level = 2
target-lexicon.opt-level = 2
object.opt-level = 2
id-arena.opt-level = 2
bumpalo.opt-level = 2
memchr.opt-level = 2
rayon.opt-level = 2
rayon-core.opt-level = 2
crossbeam-deque.opt-level = 2
crossbeam-epoch.opt-level = 2
crossbeam-utils.opt-level = 2
smallvec.opt-level = 2
hashbrown.opt-level = 2
indexmap.opt-level = 2
rustc-hash.opt-level = 2
rustix.opt-level = 2
linux-raw-sys.opt-level = 2
memfd.opt-level = 2
zstd.opt-level = 2
zstd-safe.opt-level = 2
zstd-sys.opt-level = 2
