[package]
name = "wasvy"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish = true

[workspace]
members = ["crates/*", "examples/apps/*", "examples/mods/rust/*", "tests/fixtures/crates/*"]
resolver = "2"

[workspace.package]
authors = ["EngoDev", "MarcGuiselin"]
categories = ["wasm", "game-development", "development-tools"]
rust-version = "1.95.0"
version = "0.0.8"
edition = "2024"
description = "WASI-powered modding for the Bevy engine"
keywords = ["bevy", "wasm", "wasi", "gamedev", "scripting"]
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/wasvy"
repository = "https://github.com/wasvy-org/wasvy"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
bevy_asset = "0.19.0"
bevy_app = { version = "0.19.0", features = ["reflect_functions"] }
bevy_derive = "0.19.0"
bevy_ecs = { version = "0.19.0", features = ["reflect_functions"] }
bevy_log = "0.19.0"
bevy_math = { version = "0.19.0", features = [
    "std",
    "serialize",
], default-features = false }
bevy_platform = "0.19.0"
bevy_reflect = { version = "0.19.0", features = [
    "functions",
    "reflect_documentation",
] }
bevy_remote = { version = "0.19.0", default-features = false, features = ["http"] }
bevy_state = "0.19.0"
bevy_transform = { version = "0.19.0", features = [
    "serialize",
], default-features = false }
bevy_internal = "0.19.0"
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2", default-features = false, features = [
    "deref",
    "deref_mut",
    "display",
] }
error-collection = "1.0.4"
glob = "0.3.3"
http = { version = "1.4.2", default-features = false, features = ["std"] }
inventory = "0.3.24"
proc-macro2 = "1.0.106"
proc-macro-crate = "3.5.0"
quote = "1.0.46"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "2.0.1"
serde_json = "1.0.150"
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
thiserror = "2.0.18"
toml = "1.1.2"
toml_edit = "0.25.12"
tracing = "0.1.44"
ureq = { version = "3.3.0", default-features = false, features = ["json"] }
wasmtime = { version = "46.0.1", default-features = false, features = [
    "anyhow",
    "component-model",
    "cranelift",
    "runtime",
    "std",
] }
wasmtime-wasi = { version = "46.0.1", default-features = false, features = ["p2"] }
wasvy = { path = "./" }
wasvy_cli = { path = "./crates/wasvy_cli" }
wasvy_macros = { version = "0.0.8", path = "crates/wasvy_macros" }
wasvy_mock = { version = "0.0.8", path = "crates/wasvy_mock" }
wit-bindgen = { version = "0.58.0", features = ["bitflags"] }
wit-parser = "0.252.0"
notify = "8.2.0"
trybuild = "1.0.117"

[features]
default = ["devtools", "serde_json"]
devtools = ["dep:bevy_remote"]
serde_json = ["dep:serde_json"]

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_remote = { workspace = true, optional = true }
error-collection.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasvy_macros.workspace = true

[dev-dependencies]
wit-bindgen.workspace = true
trybuild.workspace = true
bevy_math.workspace = true
bevy_transform.workspace = true
wasvy_cli.workspace = true
wasvy_mock.workspace = true

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

# Optimize Wasmtime/Cranelift and hot support crates in dev builds.
# This improves component loading/execution without optimizing every transient dependency.
[profile.dev.package]
wasmtime.opt-level = 2
wasmtime-environ.opt-level = 2
wasmtime-internal-core.opt-level = 2
wasmtime-internal-component-util.opt-level = 2
wasmtime-internal-cranelift.opt-level = 2
wasmtime-internal-fiber.opt-level = 2
wasmtime-internal-jit-icache-coherence.opt-level = 2
wasmtime-internal-unwinder.opt-level = 2
wasmtime-wasi.opt-level = 2
wasmtime-wasi-io.opt-level = 2
cranelift-assembler-x64.opt-level = 2
cranelift-bforest.opt-level = 2
cranelift-bitset.opt-level = 2
cranelift-codegen.opt-level = 2
cranelift-codegen-shared.opt-level = 2
cranelift-control.opt-level = 2
cranelift-entity.opt-level = 2
cranelift-frontend.opt-level = 2
cranelift-native.opt-level = 2
regalloc2.opt-level = 2
target-lexicon.opt-level = 2
object.opt-level = 2
id-arena.opt-level = 2
bumpalo.opt-level = 2
memchr.opt-level = 2
smallvec.opt-level = 2
hashbrown.opt-level = 2
indexmap.opt-level = 2
rustc-hash.opt-level = 2
rustix.opt-level = 2
linux-raw-sys.opt-level = 2
memfd.opt-level = 2
