[package]
name = "wasvy_cli"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description = "Development tools for applications powered by Bevy and using the Wasvy modding framework"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
bevy_remote.workspace = true
clap = { workspace = true, optional = true }
derive_more.workspace = true
error-collection.workspace = true
glob.workspace = true
http.workspace = true
semver.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasvy_macros.workspace = true
wit-parser.workspace = true
notify.workspace = true
tracing.workspace = true
ureq.workspace = true
serde.workspace = true

[[bin]]
name = "wasvy"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:clap",
]
