[package]
name = "wasvy_macros"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.36"
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
proc-macro-crate = "3.1.0"
wit-parser = "0.243.0"
