[package]
name = "custom_codec"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bevy = { version = "0.18.0", features = [
    "wayland",
    "dynamic_linking",
    "bevy_dev_tools",
] }
bevy_egui = "0.39.0"
bevy-inspector-egui = "0.36.0"
rmp = "0.8"
rmpv = { version = "1.3.1", features = ["with-serde"] }
rmp-serde = "1.3.1"
thiserror = "2.0.16"
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
wasvy = { path = "../../" ,default-features = false}
