[package]
name = "guest_wit_example"
version = "0.0.0"
edition = "2024"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.50.0", features = ["bitflags"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasvy_macros.workspace = true
