[package]
name = "guest_wit_example"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
wasvy_macros.workspace = true
