[package]
name = "host_example"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
bevy = { version = "0.17.2", features = [
    "wayland",
    "dynamic_linking",
    "bevy_dev_tools",
] }
bevy_egui = "0.37.0"
bevy-inspector-egui = "0.34.0"
wasvy = { path = "../../" }
