[package]
name = "host_example"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Replace in your own project:
wasvy = { path = "../../" } # wasvy = "0.0"

bevy = { version = "0.18.0-rc.2", features = [
    "wayland",
    "dynamic_linking",
    "bevy_dev_tools",
] }
#bevy_egui = "0.37.0" # pr is ready https://github.com/ptsd/bevy_egui/tree/bevy-0.18
#bevy-inspector-egui = "0.34.0" # no pr yet
