[package]
name = "host_wit_example"
version = "0.0.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
wasvy = { path = "../../" }
bevy_app = { version = "0.18.0", features = ["reflect_functions"] }
bevy_asset = "0.18.0"
bevy_ecs = { version = "0.18.0", features = ["reflect_functions"] }
bevy_log = "0.18.0"
bevy_reflect = { version = "0.18.0", features = ["functions"] }
serde_json = "1.0.143"
wasmtime = { version = "40.0.1", features = ["component-model"] }

[build-dependencies]
wasvy = { path = "../../" }
bevy_app = { version = "0.18.0", features = ["reflect_functions"] }
bevy_ecs = { version = "0.18.0", features = ["reflect_functions"] }
bevy_reflect = { version = "0.18.0", features = ["functions"] }

[workspace]
