[project]
name = "python-example"
version = "0.1.0"
description = ""
authors = [{ name = "EngoDev" }, { name = "MarcGuiselin" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["componentize-py (>=0.16.0,<0.17.0)"]

[tool.poetry]
packages = [{ include = "python_example", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
