[project]
name = "python-example"
version = "0.1.0"
description = ""
authors = [
    { name = "EngoDev" },
    { name = "MarcGuiselin" },
    { name = "shishanyue" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["componentize-py (>=0.21.0,<0.22.0)", "msgpack (>=1.1.2,<2.0.0)"]

[tool.poetry]
packages = [{ include = "example", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
