[package]
name = "simple"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bevy_reflect.workspace = true
bevy_transform.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:simple"

[package.metadata.component.target]
path = "wit"
world = "example"

[package.metadata.component.target.dependencies]
"wasvy:ecs" = { path = "wit/deps/wasvy-ecs" }
