[package]
name = "custom_codec_example_app"
description = "A wasvy example that demonstrates a custom codec implementation"
authors.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[dependencies]
# Replace in your own project:
# wasvy = { version = "0.0.8", default-features = false } 
wasvy = { path = "../../../", default-features = false }

bevy = { version = "0.18.0", features = [
    "wayland",
    "dynamic_linking",
    "bevy_dev_tools",
] }
bevy_egui = "0.39.0"
bevy-inspector-egui = "0.36.0"
rmpv = { version = "1.3.1", features = ["with-serde"] }
rmp-serde = "1.3.1"
anyhow.workspace = true
serde.workspace = true
