[workspace]
members = [
    "crates/game_api",
    "crates/game_host",
    "crates/modules/combat",
    "crates/modules/ai",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = "0.18.0"
bevy_app = "0.18.0"
bevy_ecs = "0.18.0"
bevy_reflect = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.50.0"
wasvy = { path = "../../.." }
game_api = { path = "crates/game_api", package = "two_modules_game_api" }
combat = { path = "crates/modules/combat", package = "two_modules_combat" }
ai = { path = "crates/modules/ai", package = "two_modules_ai" }
