# filename: pyproject.toml
[project]
name = "{{ name }}"
version = "0.0.1"
description = "My custom mod for {{ namespace }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["componentize-py (>=0.16.0,<0.17.0)"]

[tool.poetry]
packages = [{ include = "example", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
