# filename: Cargo.toml
[package]
name = "{{ name }}"
version = "0.0.0-alpha"
description = "My custom mod"
readme = "README.md"
categories = ["bevy-engine", "bevy", "wasm", "wasvy"]
rust-version = "{{ rust_version }}"

[dependencies]
bevy_transform = { git = "https://github.com/bevyengine/bevy", rev = "ce2bf99b6a001161924770a7855f4024b67138eb", features = ["serialize"] }
bevy_math = { git = "https://github.com/bevyengine/bevy", rev = "ce2bf99b6a001161924770a7855f4024b67138eb", features = ["std", "serialize"] }
wit-bindgen = "0.50.0"

[lib]
crate-type = ["cdylib"] # Needed for building to wasm
