[package]
name = "basic_example_mod"
authors.workspace = true
categories.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bevy_transform.workspace = true
bevy_math.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

[lib]
crate-type = ["cdylib"]
