[package]
name = "two_modules_ai"
version.workspace = true
edition.workspace = true

[lib]
name = "ai"
crate-type = ["rlib", "cdylib"]

[dependencies]
bevy_ecs.workspace = true
bevy_reflect.workspace = true
game_api.workspace = true
serde.workspace = true
wasvy.workspace = true
wit-bindgen.workspace = true
